# rsspub

./: .gitignore  README.md  pyproject.toml
src/rsspub/: __init__.py  cli.py  epub.py  feed.py
tests/: test_cli.py  test_epub.py  test_feed.py
