[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsspub"
version = "0.1.0"
description = "An RSS reader that converts your feed to an ebook file"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "feedparser>=6.0",
    "ebooklib>=0.18",
    "platformdirs>=3.0",
]

[project.scripts]
rsspub = "rsspub.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/rsspub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
